force-app/main/default/objects/Account/fields/Order_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Created_Date__c</fullName>
    <description>Date when the Pharmacy Account order was created by the flow.</description>
    <label>Order Created Date</label>
    <type>Date</type>
</CustomField>