force-app/main/default/objects/Account/fields/Order_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted_Date__c</fullName>
    <description>Date when the Pharmacy Account order was submitted via the flow.</description>
    <label>Order Submitted Date</label>
    <type>Date</type>
</CustomField>