force-app/main/default/objects/Account/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <description>Lookup to Account representing the Wholesaler for the Pharmacy Account created by the New Order Form flow.</description>
    <label>Wholesaler</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacy Accounts</relationshipLabel>
    <relationshipName>Pharmacy_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>